# RustyNES

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG-FULL.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSION-PLAN.md  commit.msg  crates.js  deny.toml  help.html  index.html  mkdocs.yml  rust-toolchain.toml  settings.html  src-files.js
crates/rustynes-android/: Cargo.toml
crates/rustynes-android/src/: gfx.rs  lib.rs
crates/rustynes-apu/: Cargo.toml
crates/rustynes-apu/benches/: spectral.rs
crates/rustynes-apu/src/: apu.rs  blip.rs  blip_kernel.rs  dmc.rs  envelope.rs  frame_counter.rs  length.rs  length_counter.rs  lib.rs  mixer.rs  noise.rs  opll.rs  pulse.rs  resampler.rs  snapshot.rs  sweep.rs  timer.rs  triangle.rs
crates/rustynes-apu/tests/: opll_spectral.rs  spectral.rs
crates/rustynes-cheevos/: Cargo.toml  build.rs  static_asserts.c
crates/rustynes-cheevos/src/: client.rs  events.rs  ffi.rs  http.rs  lib.rs  memory.rs  util.rs
crates/rustynes-core/: Cargo.toml
crates/rustynes-core/benches/: emulation_benchmarks.rs  full_frame.rs  snapshot_restore.rs
crates/rustynes-core/src/: bk2_interop.rs  bus.rs  bus_snapshot.rs  console.rs  controller.rs  cpu_boot_trace.rs  debug.rs  genie.rs  input_device.rs  irq_trace.rs  legacy_movie.rs  lib.rs  movie.rs  movie_interop.rs  nes.rs  palette.rs  rewind.rs  save_state.rs  scheduler.rs  vs_db.rs  vs_dualsystem.rs  zwinder.rs
crates/rustynes-core/tests/: blargg_apu_tests.rs  blargg_cpu_tests.rs  blargg_ppu_tests.rs  blargg_test_runner.rs  comprehensive_rom_tests.rs  mapper_tests.rs  nestest_integration.rs  nrom_debug.rs  rom_loading_comprehensive.rs
crates/rustynes-cpu/: Cargo.toml
crates/rustynes-cpu/benches/: cpu_throughput.rs
crates/rustynes-cpu/src/: addressing.rs  bus.rs  cpu.rs  disasm.rs  ines.rs  instructions.rs  lib.rs  opcodes.rs  scheduler.rs  snapshot.rs  state.rs  status.rs  trace.rs
crates/rustynes-cpu/tests/: adc_property.proptest-regressions  adc_property.rs  nestest_validation.rs  opcodes.rs
crates/rustynes-desktop/: Cargo.toml  README.md
crates/rustynes-desktop/src/: app.rs  audio.rs  config.rs  input.rs  lib.rs  loading.rs  main.rs  message.rs  metrics.rs  palette.rs  runahead.rs  theme.rs  view.rs
crates/rustynes-frontend/: Cargo.toml
crates/rustynes-frontend/benches/: gfx_blit.rs
crates/rustynes-frontend/src/: about_fx.rs  app.rs  audio.rs  audio_dsp.rs  av_record.rs  basic_bot.rs  cheats.rs  cli.rs  config.rs  crt.rs  emu.rs  emu_thread.rs  eq.rs  fds_firmware.rs  game_database.txt  game_db.rs  genie_database.tsv  genie_database_full.tsv  genie_database_headerless.tsv  genie_db.rs  genie_encode.rs  gfx.rs  gfx_blit.rs  hd_audio.rs  hdpack.rs  hdpack_builder.rs  help_tui.rs  history_viewer.rs  i18n.rs  icon.rs  icons.rs  input.rs  input_colors.rs  input_macros.rs  lib.rs  main.rs  movie_srt.rs  movie_ui.rs  netplay_ui.rs  ntsc.rs  (+32 more)
crates/rustynes-frontend/web/: Trunk.toml  index.html  manifest.webmanifest  sw.js
crates/rustynes-gfx-shaders/: Cargo.toml
crates/rustynes-gfx-shaders/src/: bisqwit.wgsl  crt_guest.wgsl  crt_royale.wgsl  crt_stack.rs  lib.rs  megatron.wgsl  signal_decode.wgsl
crates/rustynes-hdpack/: Cargo.toml
crates/rustynes-hdpack/src/: hd_audio.rs  hdpack.rs  lib.rs
crates/rustynes-ios/: Cargo.toml
crates/rustynes-ios/include/: rustynes_ios.h
crates/rustynes-ios/src/: audio.rs  audio_dsp.rs  ffi.rs  gfx_metal.rs  lib.rs
crates/rustynes-libretro/: Cargo.toml  Makefile  rustynes_libretro.info
crates/rustynes-libretro/src/: lib.rs
crates/rustynes-mappers/: Cargo.toml
crates/rustynes-mappers/benches/: mapper_dispatch.rs
crates/rustynes-mappers/src/: axrom.rs  bandai152.rs  bandai74.rs  bandai_fcg.rs  bmc_simple.rs  bnrom.rs  camerica.rs  cartridge.rs  cnrom.rs  color_dreams.rs  fds.rs  gxrom.rs  header.rs  homebrew_boards.rs  irem_g101.rs  irem_h3001.rs  jaleco87.rs  jaleco_discrete.rs  jaleco_ss88006.rs  jy_asic.rs  kaiser.rs  konami_vs.rs  lib.rs  m001_mmc1.rs  m002_uxrom.rs  m003_cnrom.rs  m004_mmc3.rs  m005_mmc5.rs  m007_axrom.rs  m009_mmc2.rs  m010_mmc4.rs  m011_color_dreams.rs  m013_cprom.rs  m016_bandai_fcg.rs  m018_jaleco_ss88006.rs  m019_namco163.rs  m021_vrc4.rs  m022_vrc2.rs  m024_vrc6.rs  m032_irem_g101.rs  (+96 more)
crates/rustynes-mappers/tests/: corpus.rs
crates/rustynes-mobile/: Cargo.toml
crates/rustynes-mobile/src/: lib.rs
crates/rustynes-monetization/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
crates/rustynes-monetization/shells/: README.md
crates/rustynes-monetization/src/: lib.rs  monetization.rs
crates/rustynes-netplay/: Cargo.toml
crates/rustynes-netplay/examples/: signaling_server.rs
crates/rustynes-netplay/src/: connection.rs  diagnostics.rs  lib.rs  mesh_net.rs  message.rs  nat_connect.rs  relay.rs  rng.rs  session.rs  signaling.rs  signaling_client.rs  spectator.rs  stun.rs  transport.rs  webrtc.rs
crates/rustynes-netplay/tests/: determinism.rs  mesh_udp.rs  nat_loopback.rs  relay_loopback.rs  stun_probe.rs  turn_probe.rs  udp_loopback.rs
crates/rustynes-ppu/: Cargo.toml
crates/rustynes-ppu/benches/: ppu_throughput.rs
crates/rustynes-ppu/src/: background.rs  bus.rs  ctrl.rs  lib.rs  mask.rs  oam.rs  palette.rs  palette_gen.rs  ppu.rs  raw_signal.rs  registers.rs  scroll.rs  snapshot.rs  sprite.rs  sprites.rs  state_trace.rs  status.rs  timing.rs  vram.rs
crates/rustynes-ppu/tests/: ppu_test_roms.rs
crates/rustynes-ra/: Cargo.toml
crates/rustynes-ra/src/: lib.rs
crates/rustynes-script/: Cargo.toml
crates/rustynes-script/src/: backend.rs  lib.rs  mlua_backend.rs  piccolo_backend.rs  tastudio.rs  types.rs  (+1 more)
crates/rustynes-test-harness/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: apu_reg_io.rs  cartridge_parser.rs  cpu_step.rs  mapper_writes.rs  movie.rs  netplay_message.rs  ppu_reg_io.rs  save_state.rs
(+2826 files in other folders)
