[workspace]
resolver = "2"
members = [
    "crates/rustynes-cpu",
    "crates/rustynes-ppu",
    "crates/rustynes-apu",
    "crates/rustynes-mappers",
    # Future crates (commented out until implemented):
    # "crates/rustynes-core",
    # "crates/rustynes-desktop",
    # "crates/rustynes-web",
    # "crates/rustynes-tas",
    # "crates/rustynes-netplay",
    # "crates/rustynes-achievements",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["doublegate"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/RustyNES"
homepage = "https://github.com/doublegate/RustyNES"
documentation = "https://docs.rs/rustynes"
keywords = ["nes", "emulator", "6502", "gaming", "retro"]
categories = ["emulators", "games"]

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
bitflags = "2.4"
log = "0.4"

# Testing dependencies
criterion = "0.5"
proptest = "1.4"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allowed pedantic lints
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
match_same_arms = "allow"
doc_markdown = "allow"
needless_doctest_main = "allow"
unused_self = "allow"
cargo_common_metadata = "allow"
must_use_candidate = "allow"
wildcard_enum_match_arm = "allow"
large_stack_arrays = "allow"  # Tests use 64KB arrays for NES memory

[profile.dev]
opt-level = 1  # Faster debug builds

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 1
