[workspace]
resolver = "2"
members = [
    "crates/rustynes-core",
    "crates/rustynes-cpu",
    "crates/rustynes-ppu",
    "crates/rustynes-apu",
    "crates/rustynes-mappers",
    "crates/rustynes-netplay",
    "crates/rustynes-cheevos",
    "crates/rustynes-script",
    "crates/rustynes-frontend",
    "crates/rustynes-test-harness",
    "crates/rustynes-mobile",
    "crates/rustynes-android",
    "crates/rustynes-ios",
    "crates/rustynes-gfx-shaders",
    "crates/rustynes-hdpack",
    "crates/rustynes-ra",
    "crates/rustynes-monetization", "crates/rustynes-libretro",
]
# The libretro buildbot's shared CI templates run a bare, unscoped
# `cargo build --release --target <triple>` from the repo root (no `-p`,
# no `--manifest-path` — the script is centrally maintained and can't be
# edited per-core). Scoping the default member to just the libretro crate
# keeps that command building ONLY `rustynes-libretro`, not all 18 workspace
# members (in particular `rustynes-frontend`, which needs wgpu/winit/cpal/
# wayland system libs the buildbot's headless cross-compile image doesn't
# have). This does not change any `--workspace`/`-p <crate>`-scoped command
# — every CI workflow, this crate's own Makefile, and every scripts/*.sh
# invocation already scopes explicitly. See `.gitlab-ci.yml`.
default-members = ["crates/rustynes-libretro"]

[workspace.package]
version = "2.2.4"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["DoubleGate <parobek@gmail.com>"]
repository = "https://github.com/doublegate/RustyNES"
readme = "README.md"
keywords = ["nes", "emulator", "famicom", "6502", "retro"]
categories = ["emulators", "games"]

[workspace.dependencies]
rustynes-core = { path = "crates/rustynes-core", version = "2.0.0" }
rustynes-cpu = { path = "crates/rustynes-cpu", version = "2.0.0" }
rustynes-ppu = { path = "crates/rustynes-ppu", version = "2.0.0" }
rustynes-apu = { path = "crates/rustynes-apu", version = "2.0.0", default-features = false }
rustynes-mappers = { path = "crates/rustynes-mappers", version = "2.0.0" }
rustynes-netplay = { path = "crates/rustynes-netplay", version = "2.0.0" }
rustynes-script = { path = "crates/rustynes-script", version = "2.0.0" }
rustynes-test-harness = { path = "crates/rustynes-test-harness", version = "2.0.0" }
# v1.8.0 "Android" — the shared mobile bridge, consumed by rustynes-android (and
# v1.9.0's rustynes-ios). Path dep; the version req is a floor.
rustynes-mobile = { path = "crates/rustynes-mobile", version = "2.0.0" }
# v1.8.4 — shared WGSL presentation shaders for both the desktop frontend and the
# Android wgpu renderer (single source of truth, no copy-paste drift).
rustynes-gfx-shaders = { path = "crates/rustynes-gfx-shaders", version = "2.0.0" }
# v1.8.5 — HD-pack loader + compositor + HD audio, extracted from the frontend so
# the mobile bridge can reach it (the core is no_std, so it can't live there).
rustynes-hdpack = { path = "crates/rustynes-hdpack", version = "2.0.0" }
# v2.7.0 (cheevos line) — the safe RaClient over vendored rcheevos. Native-only
# (empty crate on wasm32). Consumed by rustynes-ra (and, transitively, the
# frontend's `retroachievements` feature + the mobile bridge).
rustynes-cheevos = { path = "crates/rustynes-cheevos", version = "2.0.0" }
# v1.8.6 — RetroAchievements session state extracted from the frontend so the
# mobile bridge can reach it (RaClient is now Send). Native-only.
rustynes-ra = { path = "crates/rustynes-ra", version = "2.0.0" }

# v1.1.0 beta.3 (Workstream E) — Lua scripting. `vendored` compiles Lua 5.4
# from source (no system Lua needed); native-only (the wasm/no_std builds never
# pull this in, since `rustynes-script` is gated behind the frontend's optional
# `scripting` feature).
mlua = { version = "0.12", features = ["lua54", "vendored", "send"] }

# v1.2.0 Workstream F4 — EXPERIMENTAL pure-Rust Lua VM for the wasm backend of
# `rustynes-script` (behind the default-OFF `script-wasm` feature). piccolo has
# NO C dependency (unlike mlua's vendored Lua 5.4), so it compiles to
# wasm32-unknown-unknown; its `Fuel` mechanism maps onto the per-frame
# instruction budget. NOT byte-identical to the mlua backend (a different VM) —
# acceptable because scripts are observational/overlay + gated writes and are
# never part of the framebuffer/audio determinism oracle. See ADR 0012.
piccolo = { version = "0.3.3" }

bitflags = "2.6"
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = { version = "0.11", default-features = false }
# v1.7.0 "Forge" G4 — movie-export hash hardening. The legacy/interchange movie
# containers identify their ROM by a different digest than RustyNES's native
# SHA-256: `.fm2` uses an MD5 `romChecksum`, `.bk2` a SHA-1. Recompute both from
# the loaded ROM bytes on export so a RustyNES movie is verifiable on TASVideos.
# Same RustCrypto `digest` family as `sha2`; native frontend only. `hex` renders
# the digests as the lower-case hex the formats expect.
md-5 = { version = "0.11", default-features = false }
sha1 = { version = "0.11", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
toml = "1.1"
# v1.7.0 "Forge" H4 — per-game `<rom>.json` config overlays (frontend-only).
# A sibling/config-dir JSON layered over the v1.2.0 game-DB; absent file is a
# no-op so the default load path stays byte-identical. Native + wasm frontend.
serde_json = "1.0"
# `lz4_flex` is a pure-Rust LZ4 implementation; the `safe-encode` /
# `safe-decode` features avoid all `unsafe` in the hot path. Used by the
# rewind ring buffer to compress per-frame snapshots. `std` is opted in
# by `rustynes-core`'s `std` feature (default on for desktop builds; off when
# cross-compiling to a no_std target like `thumbv7em-none-eabihf`). `alloc`
# is requested unconditionally: 0.14 split the crate's own no_std support so
# `compress_prepend_size`/`decompress_size_prepended` (the Vec-returning block
# API rewind.rs/zwinder.rs use) now live behind `alloc`, not `std` — and
# rustynes-core already links `extern crate alloc;` in every build, std or
# not, so this costs nothing on the no_std path (`std` still implies `alloc`
# via lz4_flex's own feature table for the desktop/wasm builds).
lz4_flex = { version = "0.14", default-features = false, features = ["safe-encode", "safe-decode", "alloc"] }

# Frontend deps
winit = "0.30"
# v1.3.0 Sprint 1.4 — `webgl` feature enables the WebGL2 fallback on
# wasm32 (for browsers without WebGPU: Linux Firefox, pre-A12 iOS).
# No effect on native builds. WebGPU-primary is on by default.
wgpu = { version = "29", features = ["webgl"] }
cpal = "0.18"
egui = "0.35"
egui-wgpu = "0.35"
# `links` enables egui-winit's URL opener (webbrowser) so hyperlinks (e.g. the
# About window's GitHub link) actually launch the default browser; without it
# (default-features = false drops it) hyperlink_to is inert.
egui-winit = { version = "0.35", default-features = false, features = ["links", "wayland", "x11"] }
gilrs = "0.11"
rfd = "0.17"
directories = "5"

# v1.3.0 Sprint 1.1 — wasm32 frontend support. The chip stack is
# already `no_std + alloc`-compatible (verified by the
# `thumbv7em-none-eabihf` cross-compile CI gate); the frontend
# needs wasm-bindgen + JS glue to host on the browser. cpal 0.15's
# wasm32 backend is incomplete, so the wasm32 build also bumps
# cpal via target-specific override in the frontend crate. See
# `docs/audit/v1.3-sprint-1.1-wasm32-research-2026-05-24.md` for
# the full ecosystem-state-2026 research that informed the
# version pins.
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
web-sys = "0.3.77"
# `web_time::Instant` is a drop-in for `std::time::Instant` that
# routes to `Performance.now()` on wasm32 (where `std::time::Instant`
# panics) and to the std impl on native. winit itself depends on
# this crate transitively; using it here lets us share Instant
# semantics between native and wasm32 without `cfg` guards.
web-time = "1.1"

# Dev deps
criterion = "0.8"
proptest = "1"
insta = "1"
pretty_assertions = "1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true

# v1.0.0 Phase 4 — opt-in host-tuned build:
#   RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native -p rustynes-frontend
# (cargo profiles cannot carry rustflags; the separate profile keeps the
# host-tuned artifacts out of the portable release cache). NEVER used for
# shipped binaries (not portable). Rust enables no fast-math / FP
# contraction under target-cpu, so emitted bytes stay identical — verify
# with the oracle suite anyway when benchmarking with it.
[profile.release-native]
inherits = "release"
