[package]
name = "rustynes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.86"

[package.metadata]
cargo-fuzz = true

# Standalone manifest -- cargo-fuzz convention. Keeps the fuzz crate out of
# the workspace dependency graph so it doesn't pollute `cargo test --workspace`
# (libFuzzer needs a nightly toolchain to actually run).
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
rustynes-mappers = { path = "../crates/rustynes-mappers" }
rustynes-cpu = { path = "../crates/rustynes-cpu" }
# v2.2.0 — expanded fuzz surface: PPU / APU register I/O, the netplay
# message + signaling parsers (untrusted network input), and the save-state
# (.rns) / movie (.rnm) deserializers (untrusted file input).
rustynes-ppu = { path = "../crates/rustynes-ppu" }
rustynes-apu = { path = "../crates/rustynes-apu" }
rustynes-netplay = { path = "../crates/rustynes-netplay", default-features = false }
rustynes-core = { path = "../crates/rustynes-core" }

# Match workspace profile choices but with reasonable fuzz defaults.
[profile.release]
debug = 1

# Each target must be declared individually so cargo-fuzz can build/run them.
[[bin]]
name = "cartridge_parser"
path = "fuzz_targets/cartridge_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cpu_step"
path = "fuzz_targets/cpu_step.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mapper_writes"
path = "fuzz_targets/mapper_writes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ppu_reg_io"
path = "fuzz_targets/ppu_reg_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "apu_reg_io"
path = "fuzz_targets/apu_reg_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "netplay_message"
path = "fuzz_targets/netplay_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "save_state"
path = "fuzz_targets/save_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "movie"
path = "fuzz_targets/movie.rs"
test = false
doc = false
bench = false
