[package]
name = "rustynes-apu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NES 2A03 APU (Audio Processing Unit) emulation"
keywords = ["nes", "apu", "2A03", "emulator", "audio"]
categories = ["emulators", "multimedia::audio"]

[dependencies]
bitflags.workspace = true
log.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[lints]
workspace = true
