[package]
name = "rustynes-cheevos"
version.workspace = true
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["Parobek <parobek@gmail.com>"]
repository.workspace = true
description = "Native-only RetroAchievements (rcheevos) FFI wrapper for RustyNES"
publish = false

# This crate vendors and links the rcheevos C library, so unsafe is required.
# Override the workspace-wide `unsafe_code = "warn"` lint.
[lints.rust]
unsafe_code = "allow"

[build-dependencies]
cc = "1"

# HTTP transport is native-only. The whole crate body is gated on
# `cfg(not(target_arch = "wasm32"))`, so a wasm workspace build sees an
# empty crate and never pulls these in.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3", default-features = false, features = ["rustls"] }
