[package]
name = "rustynes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NES emulation core - integrates CPU, PPU, APU, and mappers"
keywords = ["nes", "emulator", "6502", "gaming", "retro"]
categories = ["emulators", "games"]

[dependencies]
rustynes-cpu.path = "../rustynes-cpu"
rustynes-ppu.path = "../rustynes-ppu"
rustynes-apu.path = "../rustynes-apu"
rustynes-mappers.path = "../rustynes-mappers"
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = ["rustynes-cpu/std", "rustynes-ppu/std", "rustynes-apu/std", "rustynes-mappers/std"]
serde = ["dep:serde", "rustynes-cpu/serde", "rustynes-ppu/serde", "rustynes-apu/serde", "rustynes-mappers/serde"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[lints]
workspace = true
