[package]
name = "rustynes-cpu"
description = "Cycle-accurate MOS 6502 CPU emulator for NES"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
thiserror.workspace = true
log.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[lints]
workspace = true
